2024-09-18  Oliver Kiddle  <opk@zsh.org>

	* 53093: Src/input.c: silence compiler warning when USE_LSEEK
	is not defined

	* 53092: Src/init.c: silence deprecated header warning on Linux

2024-09-14  Bart Schaefer  <schaefer@zsh.org>

	* 53088: Src/exec.c, Src/jobs.c, Test/A01grammar.ztst,
	Test/A08time.ztst: enable `time' on builtins, assignments, and
	other current-shell actions, including failed commands.  Tests.

2024-09-14  Oliver Kiddle  <opk@zsh.org>

	* c.f. Emil Velikov: 53072: Completion/Linux/Command/_dkms:
	remove completion that has been imported by the upstream project

	* 53087: Test/X05zleincarg.ztst: don't produce spurious error
	when zpty is missing

	* 53086: configure.ac: change flags used for building dynamic
	modules on Haiku OS

	* 53085: configure.ac, Src/init.c: support for BSDs in
	$ZSH_EXEPATH implementation

	* 53084: configure.ac: yet another approach to the /dev/fd
	autoconf test because of shells emulating /dev/fd

	* 53083: configure.ac, Src/Builtins/rlimits.c: handle Haiku
	specific resource limit for open vnode monitors

	* 53082: configure.ac: remove a couple of unused #defines

	* 53081: INSTALL, configure.ac, Src/init.c, Src/options.c,
	Src/signals.c, Src/zsh_system.h: remove old BeOS support code

	* 53080: configure.ac, Src/init.c, Src/signals.c, Src/signals.h:
	remove code for systems that only have the old pre-POSIX signal()

2024-08-31  Oliver Kiddle  <opk@zsh.org>

	* Clinton Bunch: 53060: Doc/Zsh/mod_random.yo,
	Src/Modules/random.c: silence build warnings

	* Clinton Bunch: 53056: Completion/Zsh/Type/_module_math_func,
	Doc/Makefile.in, Doc/Zsh/mod_random.yo, Src/Modules/random.c,
	Src/Modules/random.mdd, Src/Modules/random_real.c, configure.ac:
	new zsh/random module defining an SRANDOM parameter and
	zrand_float() and zrand_int() math functions

	* github #120: Semnodime: Completion/Unix/Command/_git: update
	_git to reflect `--recursive` being an alias

	* 53058: Completion/Unix/Command/_zstd: new completion for zstd
